lib_LTLIBRARIES = libpsrxml.la
libpsrxml_la_SOURCES = phcx.h psrxml.h psrxml_saxMethods.h psrxml_write_fits.h psrxml_xml_writing.h unpack_lookup.h phcx_reader.c phcx_writer.c psrxml.c psrxml_write_fits.c unpack_lookup.c psrxml_writer.c psrxml_unpackers.c
libpsrxml_la_includedir=$(includedir)/
libpsrxml_la_include_HEADERS = psrxml.h phcx.h unpack_lookup.h
INCLUDES=@XML_CPPFLAGS@
